Try sim demo with codons.

--- a/Notebooks/Sim_Demo.ipynb
+++ b/Notebooks/Sim_Demo.ipynb
@@ -73,58 +73,50 @@
     "    cgen.get_seq_oracle().set_frequencies(freqs)    \n",
     "    train_set = cgen.get_sequences(train_count)\n",
     "    test_set =  cgen.get_sequences(test_count)\n",
-    "    return train_set,test_set\n",
-    "\n",
-    "# Run this once to keep reusing same random number generator\n",
-    "simulator = Collection_Generator()  "
+    "    return train_set,test_set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of sequences: 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Run this repeatedly to get different random sequences.\n",
-    "SEQ_LEN=1000\n",
-    "SEQ_CNT=5000\n",
-    "simulator.get_len_oracle().set_mean(SEQ_LEN)\n",
-    "#simulator.get_seq_oracle().set_frequencies([2,1,1,2]) # A:C:G:T\n",
-    "simulator.get_seq_oracle().set_frequencies([1,1,1,1]) # A:C:G:T\n",
-    "seq_set = simulator.get_sequences(SEQ_CNT)\n",
-    "print(\"Number of sequences:\",len(seq_set))"
+    "import numpy as np\n",
+    "def get_the_facts(seqs):\n",
+    "    rd = RNA_describer()\n",
+    "    facts = rd.get_three_lengths(seq_set)\n",
+    "    facts_ary = np.asarray(facts) # 5000 rows, 3 columns \n",
+    "    print(\"Facts array:\",type(facts_ary))\n",
+    "    print(\"Facts array:\",facts_ary.shape)\n",
+    "    # Get the mean of each column\n",
+    "    mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
+    "    std_5utr, std_orf, std_3utr = np.std(facts_ary,axis=0)\n",
+    "    print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
+    "    print(\"mean    ORF length:\",int(mean_orf), \"+/-\",int(std_orf))\n",
+    "    print(\"mean 3' UTR length:\",int(mean_3utr),\"+/-\",int(std_3utr))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of facts: 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rd = RNA_describer()\n",
-    "facts = rd.get_three_lengths(seq_set)\n",
-    "print(\"Number of facts:\",len(facts))"
+    "# Run this once to keep reusing same random number generator\n",
+    "simulator = Collection_Generator()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random uniform sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,24 +125,29 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 395 +/- 238\n",
-      "mean    ORF length: 183 +/- 73\n",
-      "mean 3' UTR length: 420 +/- 239\n"
+      "mean 5' UTR length: 397 +/- 236\n",
+      "mean    ORF length: 183 +/- 72\n",
+      "mean 3' UTR length: 419 +/- 238\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "facts_ary = np.asarray(facts) # 5000 rows, 3 columns \n",
-    "print(\"Facts array:\",type(facts_ary))\n",
-    "print(\"Facts array:\",facts_ary.shape)\n",
-    "# Get the mean of each column\n",
-    "mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
-    "std_5utr, std_orf, std_3utr = np.std(facts_ary,axis=0)\n",
-    "\n",
-    "print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
-    "print(\"mean    ORF length:\",int(mean_orf), \"+/-\",int(std_orf))\n",
-    "print(\"mean 3' UTR length:\",int(mean_3utr),\"+/-\",int(std_3utr))\n",
+    "# Run this repeatedly to get different random sequences.\n",
+    "SEQ_LEN=1000\n",
+    "SEQ_CNT=5000\n",
+    "simulator.get_len_oracle().set_mean(SEQ_LEN)\n",
+    "simulator.get_seq_oracle().set_sequences(['A','C','G','T'])  # default\n",
+    "simulator.get_seq_oracle().set_frequencies([1,1,1,1]) # default\n",
+    "seq_set = simulator.get_sequences(SEQ_CNT)\n",
+    "get_the_facts(seq_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# In random sequence... \n",
     "#    any ORF tends to be short, so mean and std dev are small.\n",
     "#    longest ORF tends toward 1st half of sequence (why?).\n",
@@ -158,13 +155,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non-random codon selection. Expect more ORFs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facts array: <class 'numpy.ndarray'>\n",
+      "Facts array: (5000, 3)\n",
+      "mean 5' UTR length: 338 +/- 213\n",
+      "mean    ORF length: 239 +/- 204\n",
+      "mean 3' UTR length: 420 +/- 221\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this repeatedly to get different random sequences.\n",
+    "SEQ_LEN=333\n",
+    "SEQ_CNT=5000\n",
+    "simulator.get_len_oracle().set_mean(SEQ_LEN)\n",
+    "simulator.get_seq_oracle().set_sequences(['ATG','CCC','TAG'])\n",
+    "simulator.get_seq_oracle().set_frequencies([1,100,1]) \n",
+    "seq_set = simulator.get_sequences(SEQ_CNT)\n",
+    "get_the_facts(seq_set)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
