Add transcript option to RNA_gen.

--- a/Notebooks/Sim_Demo.ipynb
+++ b/Notebooks/Sim_Demo.ipynb
@@ -103,8 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this once to keep reusing same random number generator\n",
-    "simulator = Collection_Generator()  "
+    "# Run this once to keep reusing same generator.\n",
+    "simulator = Collection_Generator() \n",
+    "# If you want the same sequences every run, do this:\n",
+    "# simulator.set_reproducible(True) "
    ]
   },
   {
