--- a/Notebooks/Sim_Demo.ipynb
+++ b/Notebooks/Sim_Demo.ipynb
@@ -113,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random uniform sequence"
+    "## Random uniform sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +127,9 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 397 +/- 236\n",
-      "mean    ORF length: 183 +/- 72\n",
-      "mean 3' UTR length: 419 +/- 238\n"
+      "mean 5' UTR length: 399 +/- 240\n",
+      "mean    ORF length: 183 +/- 71\n",
+      "mean 3' UTR length: 417 +/- 241\n"
      ]
     }
    ],
@@ -160,12 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Non-random codon selection. Expect more ORFs."
+    "## Non-random codon selection. \n",
+    "Expect longer ORFs than in purely random sequence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,9 +175,9 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 338 +/- 213\n",
-      "mean    ORF length: 239 +/- 204\n",
-      "mean 3' UTR length: 420 +/- 221\n"
+      "mean 5' UTR length: 341 +/- 217\n",
+      "mean    ORF length: 237 +/- 198\n",
+      "mean 3' UTR length: 420 +/- 219\n"
      ]
     }
    ],
@@ -192,11 +193,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Simulated transcripts\n",
+    "The simulator generates transcripts by the following formula.\n",
+    "First 1/3 is random uniform letters to model 5'UTR.\n",
+    "Middle 1/3 is an ORF: START codon, random non-stop codons, then STOP codon.\n",
+    "Last 1/3 is random uniform letters to model 3'UTR."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facts array: <class 'numpy.ndarray'>\n",
+      "Facts array: (5000, 3)\n",
+      "mean 5' UTR length: 317 +/- 47\n",
+      "mean    ORF length: 349 +/- 42\n",
+      "mean 3' UTR length: 332 +/- 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this repeatedly to get different random sequences.\n",
+    "SEQ_LEN=1000\n",
+    "SEQ_CNT=5000\n",
+    "simulator.get_len_oracle().set_mean(SEQ_LEN)\n",
+    "simulator.set_seq_oracle(Transcript_Oracle())\n",
+    "seq_set = simulator.get_sequences(SEQ_CNT)\n",
+    "get_the_facts(seq_set)\n",
+    "# mean ORF length is slightly larger than 1/3 (why?)"
+   ]
   }
  ],
  "metadata": {
