Reran LSTM series on short RNA.

--- a/Notebooks/Sim_Demo.ipynb
+++ b/Notebooks/Sim_Demo.ipynb
@@ -85,7 +85,7 @@
     "import numpy as np\n",
     "def get_the_facts(seqs):\n",
     "    rd = RNA_describer()\n",
-    "    facts = rd.get_three_lengths(seq_set)\n",
+    "    facts = rd.get_three_lengths(seqs)\n",
     "    facts_ary = np.asarray(facts) # 5000 rows, 3 columns \n",
     "    print(\"Facts array:\",type(facts_ary))\n",
     "    print(\"Facts array:\",facts_ary.shape)\n",
@@ -127,9 +127,9 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 399 +/- 240\n",
-      "mean    ORF length: 183 +/- 71\n",
-      "mean 3' UTR length: 417 +/- 241\n"
+      "mean 5' UTR length: 397 +/- 239\n",
+      "mean    ORF length: 181 +/- 71\n",
+      "mean 3' UTR length: 420 +/- 240\n"
      ]
     }
    ],
@@ -175,9 +175,9 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 341 +/- 217\n",
-      "mean    ORF length: 237 +/- 198\n",
-      "mean 3' UTR length: 420 +/- 219\n"
+      "mean 5' UTR length: 336 +/- 212\n",
+      "mean    ORF length: 243 +/- 204\n",
+      "mean 3' UTR length: 418 +/- 220\n"
      ]
     }
    ],
@@ -214,9 +214,9 @@
      "text": [
       "Facts array: <class 'numpy.ndarray'>\n",
       "Facts array: (5000, 3)\n",
-      "mean 5' UTR length: 317 +/- 47\n",
-      "mean    ORF length: 349 +/- 42\n",
-      "mean 3' UTR length: 332 +/- 23\n"
+      "mean 5' UTR length: 236 +/- 56\n",
+      "mean    ORF length: 512 +/- 90\n",
+      "mean 3' UTR length: 251 +/- 42\n"
      ]
     }
    ],
