Improve comments. Fix AUC format for next run.

--- a/Notebooks/ORF_RNN_101.ipynb
+++ b/Notebooks/ORF_RNN_101.ipynb
@@ -6,8 +6,8 @@
     "id": "0asdcdunj2Tx"
    },
    "source": [
-    "# ORF recognition by LSTM\n",
-    "LSTM was incapable of ORF recognition on 1000 bp sequences. Try smaller.\n"
+    "# ORF recognition by RNN\n",
+    "The LSTM could recognize ORFs of 50bp in 100bp simulated RNA. What can RNN do?"
    ]
   },
   {
@@ -1077,7 +1077,7 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "print(\"%s: %.2f%%\" %('AUC',bm_auc))\n"
+    "print(\"%s: %.2f%%\" %('AUC',bm_auc*100.0))\n"
    ]
   },
   {
@@ -1112,6 +1112,21 @@
     "t = time.time()\n",
     "time.strftime('%Y-%m-%d %H:%M:%S %Z', time.localtime(t))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This Simple RNN was incapable of recognizing ORFs of length 50 in simulated RNA of length 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
