Faster version of find_longest_orf().

--- a/Notebooks/GenCode_Explore.ipynb
+++ b/Notebooks/GenCode_Explore.ipynb
@@ -18,20 +18,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2021-05-26 10:18:54 EDT'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-05-26 15:35:12 EDT\n"
+     ]
     }
    ],
    "source": [
     "import time \n",
-    "t = time.time()\n",
-    "time.strftime('%Y-%m-%d %H:%M:%S %Z', time.localtime(t))"
+    "def show_time():\n",
+    "    t = time.time()\n",
+    "    s = time.strftime('%Y-%m-%d %H:%M:%S %Z', time.localtime(t))\n",
+    "    print(s)\n",
+    "show_time()"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,34 +143,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_the_facts(seqs):\n",
+    "def get_the_facts(seqs,verbose=False):\n",
+    "    print('constructor')\n",
+    "    show_time()\n",
     "    rd = RNA_describer()\n",
+    "    print('get three')\n",
+    "    show_time()\n",
     "    facts = rd.get_three_lengths(seqs)\n",
-    "    facts_ary = np.asarray(facts) # 5000 rows, 3 columns \n",
-    "    print(\"Facts array:\",type(facts_ary))\n",
-    "    print(\"Facts array:\",facts_ary.shape)\n",
-    "    # Get the mean of each column\n",
+    "    print('as array')\n",
+    "    show_time()\n",
+    "    facts_ary = np.asarray(facts) \n",
+    "    print('mean')\n",
+    "    show_time()\n",
     "    mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
+    "    print('std')\n",
+    "    show_time()\n",
     "    std_5utr, std_orf, std_3utr = np.std(facts_ary,axis=0)\n",
-    "    print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
-    "    print(\"mean    ORF length:\",int(mean_orf), \"+/-\",int(std_orf))\n",
-    "    print(\"mean 3' UTR length:\",int(mean_3utr),\"+/-\",int(std_3utr))"
+    "    print('print')\n",
+    "    show_time()\n",
+    "    if verbose:\n",
+    "        print(\"Facts array:\",facts_ary.shape)\n",
+    "        print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
+    "        print(\"mean    ORF length:\",int(mean_orf), \"+/-\",int(std_orf))\n",
+    "        print(\"mean 3' UTR length:\",int(mean_3utr),\"+/-\",int(std_3utr))\n",
+    "    return mean_5utr, mean_orf, mean_3utr"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Protein coding RNA (mRNA)"
+    "## Demo on a small test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +358,7 @@
        "14  GCTTCGGGTTGGTGTCATGGCAGCTGCGGGGAGCCGCAAGAGGCGC...    1140  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,14 +371,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facts array: <class 'numpy.ndarray'>\n",
+      "constructor\n",
+      "2021-05-26 15:35:13 EDT\n",
+      "get three\n",
+      "2021-05-26 15:35:13 EDT\n",
+      "as array\n",
+      "2021-05-26 15:35:13 EDT\n",
+      "mean\n",
+      "2021-05-26 15:35:13 EDT\n",
+      "std\n",
+      "2021-05-26 15:35:13 EDT\n",
+      "print\n",
+      "2021-05-26 15:35:13 EDT\n",
       "Facts array: (15, 3)\n",
       "mean 5' UTR length: 132 +/- 199\n",
       "mean    ORF length: 1533 +/- 710\n",
@@ -375,42 +398,73 @@
     }
    ],
    "source": [
-    "get_the_facts( df['sequence'].tolist() )"
+    "FULLPATH=DATAPATH+TEST_FILENAME\n",
+    "testdf=load_gencode(FULLPATH,2)\n",
+    "x = get_the_facts( testdf['sequence'].tolist() ,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the GenCode data.\n",
+    "Warning: this is slow.\n",
+    "Over 100K protein-coding RNA (mRNA).\n",
+    "Almost 50K non-coding RNA (lncRNA)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facts array: <class 'numpy.ndarray'>\n",
-      "Facts array: (106143, 3)\n",
-      "mean 5' UTR length: 261 +/- 339\n",
-      "mean    ORF length: 1136 +/- 1556\n",
-      "mean 3' UTR length: 897 +/- 1385\n"
+      "2021-05-26 15:35:13 EDT\n",
+      "PC seqs loaded: 106143\n",
+      "2021-05-26 15:35:18 EDT\n",
+      "NC seqs loaded: 48752\n",
+      "2021-05-26 15:35:20 EDT\n"
      ]
     }
    ],
    "source": [
-    "FULLPATH=DATAPATH+PC_FILENAME\n",
-    "df=load_gencode(FULLPATH,1)\n",
-    "get_the_facts( df['sequence'].tolist() )"
+    "PC_FULLPATH=DATAPATH+PC_FILENAME\n",
+    "NC_FULLPATH=DATAPATH+NC_FILENAME\n",
+    "show_time()\n",
+    "pcdf=load_gencode(PC_FULLPATH,1)\n",
+    "print(\"PC seqs loaded:\",len(pcdf))\n",
+    "#discard = get_the_facts( pcdf['sequence'].tolist() ,True)\n",
+    "show_time()\n",
+    "ncdf=load_gencode(NC_FULLPATH,0)\n",
+    "print(\"NC seqs loaded:\",len(ncdf))\n",
+    "#discard = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
+    "show_time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facts array: <class 'numpy.ndarray'>\n",
+      "constructor\n",
+      "2021-05-26 15:35:20 EDT\n",
+      "get three\n",
+      "2021-05-26 15:35:20 EDT\n",
+      "as array\n",
+      "2021-05-26 15:35:46 EDT\n",
+      "mean\n",
+      "2021-05-26 15:35:46 EDT\n",
+      "std\n",
+      "2021-05-26 15:35:46 EDT\n",
+      "print\n",
+      "2021-05-26 15:35:46 EDT\n",
       "Facts array: (48752, 3)\n",
       "mean 5' UTR length: 511 +/- 1344\n",
       "mean    ORF length: 211 +/- 135\n",
@@ -419,9 +473,255 @@
     }
    ],
    "source": [
-    "FULLPATH=DATAPATH+NC_FILENAME\n",
-    "df=load_gencode(FULLPATH,1)\n",
-    "get_the_facts( df['sequence'].tolist() )"
+    "discard = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Original:\n",
+    "get three\n",
+    "2021-05-26 15:07:53 EDT\n",
+    "as array\n",
+    "2021-05-26 15:09:13 EDT\n",
+    "\n",
+    "Check ATG before method invocation:\n",
+    "get three\n",
+    "2021-05-26 15:19:32 EDT\n",
+    "as array\n",
+    "2021-05-26 15:19:48 EDT\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tid</th>\n",
+       "      <th>class</th>\n",
+       "      <th>sequence</th>\n",
+       "      <th>seqlen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ENST00000473358.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GTGCACACGGCTCCCATGCGTTGTCTTCCGAGCGTCAGGCCGCCCC...</td>\n",
+       "      <td>712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENST00000469289.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TCATCAGTCCAAAGTCCAGCAGTTGTCCCTCCTGGAATCCGTTGGC...</td>\n",
+       "      <td>535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENST00000461467.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GGGGTTTCGGGGCTGTGGACCCTGTGCCAGGAAAGGAAGGGCGCAG...</td>\n",
+       "      <td>590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ENST00000477740.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GACAAGTTCGAGCATCTTAAAATGATTCAACAGGAGGAGATAAGGA...</td>\n",
+       "      <td>491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ENST00000471248.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GAAGCTCGAGGAAGAGAAAAAAAAACTGGAAGGAGAAATCATAGAT...</td>\n",
+       "      <td>629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48746</th>\n",
+       "      <td>ENST00000427373.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AGCTCACTGTAACCTTGAACTCCTGGGCTCAAGTGATCTTCCTGCT...</td>\n",
+       "      <td>842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48747</th>\n",
+       "      <td>ENST00000611754.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TGCACACACCTTCTTTTCCAAGGTTTGTGTGCAGAACATCCTGCCC...</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48748</th>\n",
+       "      <td>ENST00000306641.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CACACAACATGGCCTTCAGCAATGCTGATTCAGGCTTTGTGGATGC...</td>\n",
+       "      <td>795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48749</th>\n",
+       "      <td>ENST00000417334.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GGTTGCCACTTCAAGGGACTACATCATGATGTCCTGTTTCTAATGA...</td>\n",
+       "      <td>344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48750</th>\n",
+       "      <td>ENST00000483543.7_PAR_Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>GTCTAGGTGCAGAGGCCAGAGGAAGTCATTGCTGTCCTGTCCCGCC...</td>\n",
+       "      <td>773</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25607 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           tid  class  \\\n",
+       "0            ENST00000473358.1      0   \n",
+       "1            ENST00000469289.1      0   \n",
+       "3            ENST00000461467.1      0   \n",
+       "5            ENST00000477740.5      0   \n",
+       "6            ENST00000471248.1      0   \n",
+       "...                        ...    ...   \n",
+       "48746        ENST00000427373.5      0   \n",
+       "48747        ENST00000611754.1      0   \n",
+       "48748        ENST00000306641.1      0   \n",
+       "48749        ENST00000417334.1      0   \n",
+       "48750  ENST00000483543.7_PAR_Y      0   \n",
+       "\n",
+       "                                                sequence  seqlen  \n",
+       "0      GTGCACACGGCTCCCATGCGTTGTCTTCCGAGCGTCAGGCCGCCCC...     712  \n",
+       "1      TCATCAGTCCAAAGTCCAGCAGTTGTCCCTCCTGGAATCCGTTGGC...     535  \n",
+       "3      GGGGTTTCGGGGCTGTGGACCCTGTGCCAGGAAAGGAAGGGCGCAG...     590  \n",
+       "5      GACAAGTTCGAGCATCTTAAAATGATTCAACAGGAGGAGATAAGGA...     491  \n",
+       "6      GAAGCTCGAGGAAGAGAAAAAAAAACTGGAAGGAGAAATCATAGAT...     629  \n",
+       "...                                                  ...     ...  \n",
+       "48746  AGCTCACTGTAACCTTGAACTCCTGGGCTCAAGTGATCTTCCTGCT...     842  \n",
+       "48747  TGCACACACCTTCTTTTCCAAGGTTTGTGTGCAGAACATCCTGCCC...     723  \n",
+       "48748  CACACAACATGGCCTTCAGCAATGCTGATTCAGGCTTTGTGGATGC...     795  \n",
+       "48749  GGTTGCCACTTCAAGGGACTACATCATGATGTCCTGTTTCTAATGA...     344  \n",
+       "48750  GTCTAGGTGCAGAGGCCAGAGGAAGTCATTGCTGTCCTGTCCCGCC...     773  \n",
+       "\n",
+       "[25607 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (ncdf['sequence'].str.len() < 1000)\n",
+    "subset = ncdf.loc[mask]\n",
+    "subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "constructor\n",
+      "2021-05-26 15:35:46 EDT\n",
+      "get three\n",
+      "2021-05-26 15:35:46 EDT\n",
+      "as array\n",
+      "2021-05-26 15:35:53 EDT\n",
+      "mean\n",
+      "2021-05-26 15:35:53 EDT\n",
+      "std\n",
+      "2021-05-26 15:35:53 EDT\n",
+      "print\n",
+      "2021-05-26 15:35:53 EDT\n",
+      "Facts array: (25607, 3)\n",
+      "mean 5' UTR length: 225 +/- 165\n",
+      "mean    ORF length: 160 +/- 85\n",
+      "mean 3' UTR length: 230 +/- 167\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(225.5727730698637, 160.50954817042216, 230.8049361502714)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_the_facts( subset['sequence'].tolist() ,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        GTGCACACGGCTCCCATGCGTTGTCTTCCGAGCGTCAGGCCGCCCC...\n",
+       "1        TCATCAGTCCAAAGTCCAGCAGTTGTCCCTCCTGGAATCCGTTGGC...\n",
+       "3        GGGGTTTCGGGGCTGTGGACCCTGTGCCAGGAAAGGAAGGGCGCAG...\n",
+       "5        GACAAGTTCGAGCATCTTAAAATGATTCAACAGGAGGAGATAAGGA...\n",
+       "6        GAAGCTCGAGGAAGAGAAAAAAAAACTGGAAGGAGAAATCATAGAT...\n",
+       "                               ...                        \n",
+       "48746    AGCTCACTGTAACCTTGAACTCCTGGGCTCAAGTGATCTTCCTGCT...\n",
+       "48747    TGCACACACCTTCTTTTCCAAGGTTTGTGTGCAGAACATCCTGCCC...\n",
+       "48748    CACACAACATGGCCTTCAGCAATGCTGATTCAGGCTTTGTGGATGC...\n",
+       "48749    GGTTGCCACTTCAAGGGACTACATCATGATGTCCTGTTTCTAATGA...\n",
+       "48750    GTCTAGGTGCAGAGGCCAGAGGAAGTCATTGCTGTCCTGTCCCGCC...\n",
+       "Name: sequence, Length: 25607, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset['sequence']"
    ]
   },
   {
