Ran GenCode Explore.

--- a/Notebooks/GenCode_Explore.ipynb
+++ b/Notebooks/GenCode_Explore.ipynb
@@ -143,28 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_the_facts(seqs,verbose=False):\n",
-    "    print('constructor')\n",
-    "    show_time()\n",
     "    rd = RNA_describer()\n",
-    "    print('get three')\n",
-    "    show_time()\n",
     "    facts = rd.get_three_lengths(seqs)\n",
-    "    print('as array')\n",
-    "    show_time()\n",
     "    facts_ary = np.asarray(facts) \n",
-    "    print('mean')\n",
-    "    show_time()\n",
     "    mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
-    "    print('std')\n",
-    "    show_time()\n",
     "    std_5utr, std_orf, std_3utr = np.std(facts_ary,axis=0)\n",
-    "    print('print')\n",
-    "    show_time()\n",
     "    if verbose:\n",
     "        print(\"Facts array:\",facts_ary.shape)\n",
     "        print(\"mean 5' UTR length:\",int(mean_5utr),\"+/-\",int(std_5utr))\n",
@@ -182,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +346,7 @@
        "14  GCTTCGGGTTGGTGTCATGGCAGCTGCGGGGAGCCGCAAGAGGCGC...    1140  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,25 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "constructor\n",
-      "2021-05-26 15:35:13 EDT\n",
-      "get three\n",
-      "2021-05-26 15:35:13 EDT\n",
-      "as array\n",
-      "2021-05-26 15:35:13 EDT\n",
-      "mean\n",
-      "2021-05-26 15:35:13 EDT\n",
-      "std\n",
-      "2021-05-26 15:35:13 EDT\n",
-      "print\n",
-      "2021-05-26 15:35:13 EDT\n",
       "Facts array: (15, 3)\n",
       "mean 5' UTR length: 132 +/- 199\n",
       "mean    ORF length: 1533 +/- 710\n",
@@ -415,18 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-05-26 15:35:13 EDT\n",
+      "2021-05-26 15:53:36 EDT\n",
       "PC seqs loaded: 106143\n",
-      "2021-05-26 15:35:18 EDT\n",
+      "2021-05-26 15:53:41 EDT\n",
       "NC seqs loaded: 48752\n",
-      "2021-05-26 15:35:20 EDT\n"
+      "2021-05-26 15:53:43 EDT\n"
      ]
     }
    ],
@@ -436,45 +412,46 @@
     "show_time()\n",
     "pcdf=load_gencode(PC_FULLPATH,1)\n",
     "print(\"PC seqs loaded:\",len(pcdf))\n",
-    "#discard = get_the_facts( pcdf['sequence'].tolist() ,True)\n",
     "show_time()\n",
     "ncdf=load_gencode(NC_FULLPATH,0)\n",
     "print(\"NC seqs loaded:\",len(ncdf))\n",
-    "#discard = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
     "show_time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "constructor\n",
-      "2021-05-26 15:35:20 EDT\n",
-      "get three\n",
-      "2021-05-26 15:35:20 EDT\n",
-      "as array\n",
-      "2021-05-26 15:35:46 EDT\n",
-      "mean\n",
-      "2021-05-26 15:35:46 EDT\n",
-      "std\n",
-      "2021-05-26 15:35:46 EDT\n",
-      "print\n",
-      "2021-05-26 15:35:46 EDT\n",
+      "2021-05-26 16:03:35 EDT\n",
+      "Protein Coding set:\n",
+      "Facts array: (106143, 3)\n",
+      "mean 5' UTR length: 261 +/- 339\n",
+      "mean    ORF length: 1136 +/- 1556\n",
+      "mean 3' UTR length: 897 +/- 1385\n",
+      "2021-05-26 16:07:36 EDT\n",
+      "Non Coding set:\n",
       "Facts array: (48752, 3)\n",
       "mean 5' UTR length: 511 +/- 1344\n",
       "mean    ORF length: 211 +/- 135\n",
-      "mean 3' UTR length: 606 +/- 1100\n"
+      "mean 3' UTR length: 606 +/- 1100\n",
+      "2021-05-26 16:08:03 EDT\n"
      ]
     }
    ],
    "source": [
-    "discard = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
-    "\n"
+    "# Warning: each get_the_facts() takes up to 5 minutes.\n",
+    "show_time()\n",
+    "print(\"Protein Coding set:\")\n",
+    "pc_means = get_the_facts( pcdf['sequence'].tolist() ,True)\n",
+    "show_time()\n",
+    "print(\"Non Coding set:\")\n",
+    "nc_means = get_the_facts( ncdf['sequence'].tolist() ,True)\n",
+    "show_time()"
    ]
   },
   {
