Add tests and bug fix to ORF_counter.

--- a/Notebooks/GenCode_Explore_101.ipynb
+++ b/Notebooks/GenCode_Explore_101.ipynb
@@ -9,7 +9,9 @@
     "Explore the human RNA sequences from GenCode.\n",
     "\n",
     "Assume user downloaded files from GenCode 38 [FTP](http://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_38/)\n",
-    "to a subdirectory called data."
+    "to a subdirectory called data.\n",
+    "\n",
+    "Try our ORF_counter algorithm."
    ]
   },
   {
@@ -148,7 +150,7 @@
    "outputs": [],
    "source": [
     "def get_the_facts(seqs,verbose=False):\n",
-    "    rd = RNA_describer()\n",
+    "    oc = ORF_counter()\n",
     "    facts = rd.get_three_lengths(seqs)\n",
     "    facts_ary = np.asarray(facts) \n",
     "    mean_5utr, mean_orf, mean_3utr = np.mean(facts_ary,axis=0)\n",
